added ability to revoke a request

--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -36,6 +36,7 @@
             <td>
               <% if request.responders.include?(current_user) %>
                 <%= link_to 'Modify your response.', edit_request_response_path(request, current_response(request,current_user)) %>
+                <%= link_to 'Revoke reponse to request', request_response_path(request, current_response(request,current_user)), method: :delete, data: { confirm: 'Are you sure?' } %>
               <% else %>
                 <%= link_to 'Respond to request.', new_request_response_path(request) %></td>
               <% end %>
