Enabled user to show only requests they have responded to.

--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -60,7 +60,7 @@
       </div>
       <label>Needed Skills</label>
       <div class = "checkbox_field">
-        <% @skills.all.each do |skill| %>
+        <% @skills.each do |skill| %>
           <div class = "skill_name">
             <%= skill.name %>
           </div>
