--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,7 @@
           <li><%= link_to "Projects",    projects_path %></li>
           <li><%= link_to "Open Requests",  requests_path(:active => true) %></li>
           <li><%= link_to "My Requests",    requests_path(:id => current_user) %></li>
+          <li><%= link_to "Resonded Requests", requests_path(:applied => current_user) %></li>
           <li><%= link_to "All Requests",  requests_path %></li>
           <li><%= link_to "Users",       users_path %></li>
           <li class="dropdown">
