--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -57,7 +57,7 @@
       </div>
       <label>Current Skills</label>
       <div class = "checkbox_field">
-        <% @skills.all.each do |skill| %>
+        <% @skills.each do |skill| %>
           <div class = "skill_name">
             <%= skill.name %> 
           </div>
@@ -67,7 +67,7 @@
       </div><br>
       <label>Desired Skills</label>
       <div class="checkbox_field">
-        <% @skills.all.each do |skill| %>
+        <% @skills.each do |skill| %>
           <div class="skill_name">
             <%= skill.name %>  
           </div>
