--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,53 +1,28 @@
 <h1>Listing Requests</h1>
-
-<div id="open">
-    <table>
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Description</th>
-          <th>Start date</th>
-          <th>End date</th>
-          <th>Project Association</th>
-          <th>Location</th>
-          <th>Department</th>
-          <th>Group</th>
-          <th>Created by</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
-  
-      <tbody>
-        <% @requests.each do |request| %>
-          <tr>
-            <td><%= request.name %></td>
-            <td><%= request.description %></td>
-            <td><%= request.start_date %></td>
-            <td><%= request.end_date %></td>
-            <td><%= request.project.name %></td>
-            <td><%= request.location.name%></td>
-            <td><%= request.department.name %></td>
-            <td><%= request.group.name %></td>
-            <td><%= request.user.full_name %></td>
-            <td><%= link_to 'Show', request %></td>
-            <td><%= link_to 'Edit', edit_request_path(request) %></td>
-            <td>
-              <% if request.responders.include?(current_user) %>
-                <%= link_to 'Modify your response.', edit_request_response_path(request, current_response(request,current_user)) %>
-                <%= link_to 'Revoke reponse to request', request_response_path(request, current_response(request,current_user)), method: :delete, data: { confirm: 'Are you sure?' } %>
-              <% else %>
-                <%= link_to 'Respond to request.', new_request_response_path(request) %></td>
-              <% end %>
-            <td>
-              <% if current_user.admin? || owner_of?(request) %>
-                <%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %>
-              <% end %>
-            </td>
-          </tr>
+<div id="request_container">
+  <% @requests.each do |request| %>
+    <div class="each_request">
+      <%= request.name %>: <%= request.start_date %> - <%= request.end_date %><br>
+      Posted by <%= request.user.full_name %> in <%= request.location.name %> Office (Group: <%= request.group.name %>)<br>
+      Description: <%= request.description %><br>
+      <% if owner_of?(request) %>
+        <h2>Responses</h2>
+        <% request.responses.each do |response| %>
+          <div class="each_response">
+            <%= link_to response.user.full_name, user_path(response.user) %>  Comment: <%= response.comment %>
+          </div>
         <% end %>
-      </tbody>
-    </table>
+      <% elsif request.assignees.include?(current_user) %>
+        You've been assigned to this request!
+      <% elsif request.responders.include?(current_user) %>
+        <%= link_to 'Modify  Response', edit_request_response_path(request, current_response(request,current_user)), class: "btn btn-primary" %>
+        <%= link_to 'Revoke Reponse', request_response_path(request, current_response(request,current_user)), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-warning" %>
+      <% else %>
+        <%= link_to 'Respond to Request.', new_request_response_path(request), class: "btn btn-primary" %></td>
+      <% end %>
+    </div><br>
+  <% end %>
 </div>
-<br>
+
 
 <%= link_to 'New Request', new_request_path %>
