--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -26,7 +26,7 @@
         <% end %>
       <% elsif request.assignees.include?(current_user) %>
         You've been assigned to this request!
-      <% elsif request.open? %>
+      <% elsif !request.open? %>
         No longer accepting responses to this request.
       <% elsif request.responders.include?(current_user) %>
         <%= link_to 'Modify  Response', edit_request_response_path(request, current_response(request,current_user)), class: "btn btn-primary btn-sm" %>
