--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -3,25 +3,31 @@
   <%= will_paginate %>
   <% @requests.each do |request| %>
     <div class="each_request">
-      <strong><%= request.name %>:</strong> <%= request.start_date %> - <%= request.end_date %>
-      <% if request.start_date <= Date.today && Date.today <= request.end_date %>
-        (In Progress)
-      <% elsif request.start_date > Date.today %>
-        (Not Yet Begun)
-      <% else %>
-        (Request Ended)
-      <% end %><br>
-      Posted by <%= request.user.full_name %> in <%= request.location.name %> Office (Group: <%= request.group.name %>)<br>
-      Description: <%= request.description %><br>
+      <div class="row">
+        <h4><%= request.name %>:</h4> <%= request.start_date.to_s(:long) %> - <%= request.end_date.to_s(:long) %>
+        <% if request.start_date <= Date.today && Date.today <= request.end_date %>
+          (In Progress)
+        <% elsif request.start_date > Date.today %>
+          (Not Yet Begun)
+        <% else %>
+          (Request Ended)
+        <% end %>
+      </div>
+      <div class="row">
+        Posted by <%= request.user.full_name %> in <%= request.location.name %> Office (Group: <%= request.group.name %>)
+      </div>
+      <div class="row">
+        Description: <%= request.description %><br>
+      </div>  
       <% if owner_of?(request) %>
        <br> Responses:
         <% request.responses.each do |response| %>
           <div class="each_response">
             <%= link_to response.user.full_name, user_path(response.user) %>  Comment: <%= response.comment %>
             <% if request.assignees.include?(response.user) %>
-              <%= link_to 'Unassign', destroy_assignment_path(current_assignment(request, response.user)), class: "btn btn-danger btn-xs", :method => :delete %>
+              <%= link_to 'Unassign', destroy_assignment_path(current_assignment(request, response.user)), class: "btn btn-default btn-xs", :method => :delete %>
             <% else %>
-              <%= link_to 'Assign', create_assignment_path(request_id: request, user_id: response.user), class: "btn btn-primary btn-xs", :method => :post %>
+              <%= link_to 'Assign', create_assignment_path(request_id: request, user_id: response.user), class: "btn btn-default btn-xs", :method => :post %>
             <% end %>
           </div>
         <% end %>
@@ -30,10 +36,10 @@
       <% elsif !request.open? %>
         No longer accepting responses to this request.
       <% elsif request.responders.include?(current_user) %>
-        <%= link_to 'Modify  Response', edit_request_response_path(request, current_response(request,current_user)), class: "btn btn-primary btn-sm" %>
-        <%= link_to 'Revoke Reponse', request_response_path(request, current_response(request,current_user)), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm" %>
+        <%= link_to 'Modify  Response', edit_request_response_path(request, current_response(request,current_user)), class: "btn btn-default btn-sm" %>
+        <%= link_to 'Revoke Reponse', request_response_path(request, current_response(request,current_user)), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default btn-sm" %>
       <% else %>
-        <%= link_to 'Respond to Request.', new_request_response_path(request), class: "btn btn-primary" %></td>
+        <%= link_to 'Respond to Request.', new_request_response_path(request), class: "btn btn-default btn-sm" %></td>
       <% end %>
     </div><br>
   <% end %>
@@ -41,4 +47,4 @@
 </div>
 
 
-<%= link_to 'New Request', new_request_path %>
+<%= link_to 'New Request', new_request_path, class: "btn btn-default btn-md" %>
