--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
         <% if logged_in? %>
           <li><%= link_to "Projects",    projects_path %></li>
           <li><%= link_to "My Requests",    requests_path(:id => current_user) %></li>
-          <li><%= link_to "Applied Requests", requests_path(:applied => true) %></li>
+          <li><%= link_to "Applications", requests_path(:applied => true) %></li>
           <li><%= link_to "Open Requests",  requests_path(:active => true) %></li>
           <li><%= link_to "Users",       users_path %></li>
           <li class="dropdown">
