--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,50 +1,66 @@
-<h1>Listing Requests</h1>
-<div id="request_container">
-  <%= will_paginate %>
-  <% @requests.each do |request| %>
-    <div class="each_request">
-      <div class="row">
-        <h4><%= request.name %>:</h4> <%= request.start_date.to_s(:long) %> - <%= request.end_date.to_s(:long) %>
-        <% if request.start_date <= Date.today && Date.today <= request.end_date %>
-          (In Progress)
-        <% elsif request.start_date > Date.today %>
-          (Not Yet Begun)
+<% if params.include?(:user) %>
+  <h1>My Requests</h1>
+<% elsif params.include?(:active) %>
+  <h1>Open Requests</h1>
+<% elsif params.include?(:applied) %>
+  <h1>Applications</h1>
+<% else %>
+  <h1>All Requests</h1>
+<% end %>
+<div class="container">
+  <%= link_to 'New Request', new_request_path, class: "btn btn-default btn-sm" %>
+  <div id="request_container">
+    <%= will_paginate %>
+    <% @requests.each do |request| %>
+      <div class="each_request">
+        <div class="row">
+          <h4><%= request.name %>:</h4> <%= request.start_date.to_s(:long) %> - <%= request.end_date.to_s(:long) %>
+          <% if request.start_date <= Date.today && Date.today <= request.end_date %>
+            (In Progress)
+          <% elsif request.start_date > Date.today %>
+            (Not Yet Begun)
+          <% else %>
+            (Request Ended)
+          <% end %>
+        </div>
+        <div class="row">
+          Posted by <%= request.user.full_name %> in <%= request.location.name %> Office (Group: <%= request.group.name %>)
+        </div>
+        <div class="row">
+          Description: <%= request.description %><br>
+        </div>  
+        <% if owner_of?(request) %>
+         <br> Responses:
+          <% request.responses.each do |response| %>
+            <div class="each_response">
+              <%= link_to response.user.full_name, user_path(response.user) %>  Comment: <%= response.comment %>
+              <% if request.assignees.include?(response.user) %>
+                <%= link_to 'Unassign', destroy_assignment_path(current_assignment(request, response.user)), class: "btn btn-default btn-xs", :method => :delete %>
+              <% else %>
+                <%= link_to 'Assign', create_assignment_path(request_id: request, user_id: response.user), class: "btn btn-default btn-xs", :method => :post %>
+              <% end %>
+            </div>
+          <% end %>
+        <% elsif request.assignees.include?(current_user) %>
+          You've been assigned to this request!
+        <% elsif !request.open? %>
+          No longer accepting responses to this request.
+        <% elsif request.responders.include?(current_user) %>
+          <%= link_to 'Modify  Response', edit_request_response_path(request, current_response(request,current_user)), class: "btn btn-default btn-xs" %>
+          <%= link_to 'Revoke Reponse', request_response_path(request, current_response(request,current_user)), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default btn-xs" %>
         <% else %>
-          (Request Ended)
+          <%= link_to 'Respond to Request.', new_request_response_path(request), class: "btn btn-default btn-xs" %></td>
         <% end %>
-      </div>
+      </div><br>
       <div class="row">
-        Posted by <%= request.user.full_name %> in <%= request.location.name %> Office (Group: <%= request.group.name %>)
-      </div>
-      <div class="row">
-        Description: <%= request.description %><br>
-      </div>  
-      <% if owner_of?(request) %>
-       <br> Responses:
-        <% request.responses.each do |response| %>
-          <div class="each_response">
-            <%= link_to response.user.full_name, user_path(response.user) %>  Comment: <%= response.comment %>
-            <% if request.assignees.include?(response.user) %>
-              <%= link_to 'Unassign', destroy_assignment_path(current_assignment(request, response.user)), class: "btn btn-default btn-xs", :method => :delete %>
-            <% else %>
-              <%= link_to 'Assign', create_assignment_path(request_id: request, user_id: response.user), class: "btn btn-default btn-xs", :method => :post %>
-            <% end %>
-          </div>
+        <% if current_user == request.user %>
+          <%= link_to "Edit", edit_request_path(request), class: "btn btn-default btn-xs" %>
         <% end %>
-      <% elsif request.assignees.include?(current_user) %>
-        You've been assigned to this request!
-      <% elsif !request.open? %>
-        No longer accepting responses to this request.
-      <% elsif request.responders.include?(current_user) %>
-        <%= link_to 'Modify  Response', edit_request_response_path(request, current_response(request,current_user)), class: "btn btn-default btn-sm" %>
-        <%= link_to 'Revoke Reponse', request_response_path(request, current_response(request,current_user)), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default btn-sm" %>
-      <% else %>
-        <%= link_to 'Respond to Request.', new_request_response_path(request), class: "btn btn-default btn-sm" %></td>
-      <% end %>
-    </div><br>
-  <% end %>
-  <% will_paginate %>
+        <% if current_user.admin? %>
+          <%= link_to "Delete", request, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default btn-xs" %>
+        <% end %>
+      </div><br>
+    <% end %>
+    <% will_paginate %>
+  </div>
 </div>
-
-
-<%= link_to 'New Request', new_request_path, class: "btn btn-default btn-md" %>
