--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,6 +21,8 @@ textarea{
 
 .center {
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .center h1 {
@@ -43,12 +45,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1;
 }
 
-h1 {
-  font-size: 3em;
-  letter-spacing: -2px;
-  margin-bottom: 30px;
-  text-align: center;
-}
+
 
 h2 {
   font-size: 1.2em;
@@ -223,11 +220,33 @@ input[type=checkbox]{
 
 .alert-notice 
 {
-  background-color: #89F681;
-  border-color: #04B431;
-  color: green;
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+  color: #3c763d;
 }
 h4
 {
   display: inline-block;
+}
+.horizontal-list
+{
+  list-style-type: none;
+}
+.horizontal-list li
+{
+  display: inline;
+}
+.horizontal-list li:after{
+  content: ",";
+}
+.horizontal-list li:last-child:after{
+  content: "";
+}
+.col-fill
+{
+  width:100%; 
+}
+.gravatar
+{
+  width: 100%;
 }
