--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,31 +1,22 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Groups</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<%= link_to 'New Group', new_group_path, class: "btn btn-default btn-sm" %><br><br>
     <% @groups.each do |group| %>
-      <tr>
-        <td><%= group.name %></td>
-        <td><%= link_to 'Show', group %></td>
-        <td><%= link_to 'Edit', edit_group_path(group) %></td>
-        <td>
+      <div class="row">
+        <div class="col-md-6">
+          <strong>Name:</strong> <%= group.name %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
           <% if current_user.admin? %>
-            <%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %>
+            <%= link_to 'Edit', edit_group_path(group), class: "btn btn-default btn-xs" %>
+            <%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default btn-xs" %>
           <% end %>
-        </td>
-      </tr>
+        </div>
+      </div></br>
     <% end %>
-  </tbody>
-</table>
+
 
 <br>
-
-<%= link_to 'New Group', new_group_path %>
