--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,30 +1,46 @@
-<header>
   <div class="container">
-    <%= link_to "One Team", root_path, id: "logo" %>
+    <header>
+      <ul class="nav nav-pills pull-right btn-group">
+        <% if logged_in? %>
+          <li><%= link_to "Projects", projects_path %></li>
+          <li><%= link_to "Users", users_path %></li>
+          <% if current_user.admin? %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin Menu <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Departments", departments_path %></li>
+                <li><%= link_to "Groups", groups_path %></li>
+                <li><%= link_to "Locations", locations_path %></li>
+                <li><%= link_to "Positions", positions_path %></li>
+                <li><%= link_to "Skills", skills_path %></li>
+              </ul>
+            </li>
+          <% end %>
+          <li><%= link_to "Log Out", logout_path, method: "delete" %></li>
+        <% else %>
+          <li><%= link_to "Log In", login_path%></li>
+        <% end %>
+      </ul>
+    </header>
+  </div>
+  
+  <div class="container">
     <nav>
       <ul class="nav nav-tabs">
         <% if logged_in? %>
-          <li role="presentation" class="active"><%= link_to "Projects",    projects_path %></li>
-          <li role="presentation"><%= link_to "My Requests",    requests_path(:id => current_user) %></li>
-          <li role="presentation"><%= link_to "Applied Requests", requests_path(:applied => true) %></li>
-          <li role="presentation"><%= link_to "Open Requests",  requests_path(:active => true) %></li>
-          <li role="presentation"><%= link_to "Users",       users_path %></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Account <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Profile", current_user %></li>
-              <li class="divider"></li>
-              <li>
-                <%= link_to "Log out", logout_path, method: "delete" %>
-              </li>
-            </ul>
+          <li role="presentation" class=<%= 'active' if params.include?(:active) %>>
+            <%= link_to "Open Requests",  requests_path(:active => true) %>
           </li>
-        <% else %>
-          <li><%= link_to "Log in", login_path %></li>
+          <li role="presentation" class=<%= 'active' if params.include?(:user) %>>
+            <%= link_to "My Requests",    requests_path(:user => current_user) %>
+          </li>
+          <li role="presentation" class=<%= 'active' if params.include?(:applied) %>>
+            <%= link_to "Applications", requests_path(:applied => true) %>
+          </li>
+          <li role="presentation" class=<%= 'active' if current_page?(current_user) %>>
+            <%= link_to "My Profile", current_user %>
+          </li>
         <% end %>
       </ul>
     </nav>
   </div>
-</header>
