--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,31 +1,22 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Locations</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<%= link_to 'New Location', new_location_path, class: "btn btn-default btn-sm" %><br><br>
     <% @locations.each do |location| %>
-      <tr>
-        <td><%= location.name %></td>
-        <td><%= link_to 'Show', location %></td>
-        <td><%= link_to 'Edit', edit_location_path(location) %></td>
-        <td>
+      <div class="row">
+        <div class="col-md-6">
+          <strong>City:</strong> <%= location.name %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
           <% if current_user.admin? %>
-            <%= link_to 'Destroy', location, method: :delete, data: { confirm: 'Are you sure?' } %>
+            <%= link_to 'Edit', edit_location_path(location), class: "btn btn-default btn-xs" %>
+            <%= link_to 'Destroy', location, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default btn-xs" %>
           <% end %>
-        </td>
-      </tr>
+        </div>
+      </div></br>
     <% end %>
-  </tbody>
-</table>
+
 
 <br>
-
-<%= link_to 'New Location', new_location_path %>
