--- a/app/views/positions/_form.html.erb
+++ b/app/views/positions/_form.html.erb
@@ -11,11 +11,15 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="row">
+    <div class="col-md-4">
+      <%= f.label :name %><br>
+      <%= f.text_field :name, class: "form-control" %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="row">
+    <div class="col-md-4">
+      <%= f.submit class: "btn btn-default btn-sm" %>
+    </div>
   </div>
 <% end %>
