--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -1,31 +1,22 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Positions</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<%= link_to 'New Position', new_position_path, class: "btn btn-default btn-sm" %><br><br>
     <% @positions.each do |position| %>
-      <tr>
-        <td><%= position.name %></td>
-        <td><%= link_to 'Show', position %></td>
-        <td><%= link_to 'Edit', edit_position_path(position) %></td>
-        <td>
+      <div class="row">
+        <div class="col-md-6">
+          <strong>Position:</strong> <%= position.name %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
           <% if current_user.admin? %>
-            <%= link_to 'Destroy', position, method: :delete, data: { confirm: 'Are you sure?' } %>
+            <%= link_to 'Edit', edit_position_path(position), class: "btn btn-default btn-xs" %>
+            <%= link_to 'Destroy', position, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default btn-xs" %>
           <% end %>
-        </td>
-      </tr>
+        </div>
+      </div></br>
     <% end %>
-  </tbody>
-</table>
+
 
 <br>
-
-<%= link_to 'New Position', new_position_path %>
