--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -11,25 +11,35 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %>*<br>
-    <%= f.text_field :name %>
+  <div class="row">
+    <div class="form-group col-md-4">
+      <%= f.label :name %>*<br>
+      <%= f.text_field :name, class: "form-control" %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :description %>*<br>
-    <%= f.text_area :description %>
+  <div class="row">
+    <div class="form-group col-md-4">
+      <%= f.label :description %>*<br>
+      <%= f.text_area :description, class: "form-control" %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :start_date %>*<br>
-    <%= f.date_select :start_date %>
+  <div class="row">
+    <div class="form-group col-md-4">
+      <%= f.label :start_date %>*<br>
+      <%= f.date_select :start_date, class: "form-control" %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :end_date %>*<br>
-    <%= f.date_select :end_date %>
+  <div class="row">
+    <div class="form-group col-md-4">
+      <%= f.label :end_date %>*<br>
+      <%= f.date_select :end_date, {class: "form-control"} %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :user_id %>*<br>
-    <%= f.collection_select :user_id, @users, :id, :full_name, class: 'form-control' %>
+  <div class="row">
+    <div class="form-group col-md-4">
+      <%= f.label :user_id %>*<br>
+      <%= f.collection_select :user_id, @users, :id, :full_name,{include_blank: ""}, {class: 'form-control'} %>
+    </div>
   </div>
   <div class="actions">
     <%= f.submit %>
