--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -1,31 +1,22 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Skills</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<%= link_to 'New skill', new_skill_path, class: "btn btn-default btn-sm" %><br><br>
     <% @skills.each do |skill| %>
-      <tr>
-        <td><%= skill.name %></td>
-        <td><%= link_to 'Show', skill %></td>
-        <td><%= link_to 'Edit', edit_skill_path(skill) %></td>
-        <td>
+      <div class="row">
+        <div class="col-md-6">
+          <strong>Skill:</strong> <%= skill.name %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
           <% if current_user.admin? %>
-            <%= link_to 'Destroy', skill, method: :delete, data: { confirm: 'Are you sure?' } %>
+            <%= link_to 'Edit', edit_skill_path(skill), class: "btn btn-default btn-xs" %>
+            <%= link_to 'Destroy', skill, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default btn-xs" %>
           <% end %>
-        </td>
-      </tr>
+        </div>
+      </div></br>
     <% end %>
-  </tbody>
-</table>
+
 
 <br>
-
-<%= link_to 'New Skill', new_skill_path %>
