--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,8 +1,7 @@
-<% provide(:title, 'Edit User') %>
+<% provide(:title, "Edit User") %>
 <%= form_for(@user) do |f| %>
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    
+
       <% if @user.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -14,70 +13,92 @@
           </ul>
         </div>
       <% end %>
-
-      <div class="field">
-        <%= f.label :first_name %>*<br>
-        <%= f.text_field :first_name %>
+      <div class="row">
+        <div class="form-group col-md-4">
+          <%= f.label :first_name, class: "form-label" %>*<br>
+          <%= f.text_field :first_name, class: "form-control" %>
+        </div>
+        <div class="form-group col-md-4">
+          <%= f.label :last_name, class: "form-label" %>*<br>
+          <%= f.text_field :last_name, class: "form-control" %>
+        </div>
       </div>
-      <div class="field">
-        <%= f.label :last_name %>*<br>
-        <%= f.text_field :last_name %>
-      </div>
-      <div class="field">
-        <%= f.label :email %>*<br>
-        <%= f.text_field :email %>
-      </div>
-      <div class="field">
-        <%= f.label :manager_id %><br>
-        <%= f.collection_select :manager_id, User.all, :id, :full_name, include_blank: '', class: 'form-control' %>
-      </div>
-      <div class="field">
-        <%= f.label :years_with_company %><br>
-        <%= f.number_field :years_with_company %>
-      </div>
-      <div class="field">
-        <%= f.label :department_id, "Department*" %><br>
-        <%= f.collection_select :department_id, @departments, :id, :name, 
-                                include_blank: '', class: 'form-control' %>
-      </div>
-      <div class="field">
-        <%= f.label :location_id %>*<br>
+      <div class="row">
+        <div class="form-group col-md-4">
+          <%= f.label :email, class: "form-label" %>*<br>
+          <%= f.text_field :email, class: "form-control" %>
+        </div>
+        <div class="form-group col-md-2">
+        <%= f.label :location_id, class: "form-label" %>*<br>
         <%= f.collection_select :location_id, @locations, :id, :name,
-                                include_blank: '', class: 'form-control' %>
-      </div>
-      <div class="field">
-        <%= f.label :position_id %>*<br>
-        <%= f.collection_select :position_id, @positions, :id, :name,
-                                include_blank: '', class: 'form-control' %>
-      </div>
-      <div class="field">
-        <%= f.label :group_id %>*<br>
+                                {include_blank: ""}, {class: "form-control"} %>
+        </div>
+        <div class="form-group col-md-1">
+        <%= f.label :department_id, "Department*", class: "form-label" %><br>
+        <%= f.collection_select :department_id, @departments, :id, :name, 
+                                {include_blank: ""}, {class: "form-control"} %>
+        </div>
+        <div class="form-group col-md-2">
+        <%= f.label :group_id, class: "form-label" %>*<br>
         <%= f.collection_select :group_id, @groups, :id, :name,
-                                include_blank: '', class: 'form-control' %>
+                                {include_blank: ""}, {class: "form-control"} %>
+        </div>
       </div>
-      <label>Current Skills</label>
-      <div class = "checkbox_field">
-        <% @skills.each do |skill| %>
-          <div class = "skill_name">
-            <%= skill.name %> 
-          </div>
-          <%= check_box_tag  "user[skill_ids][]", skill.id, @user.skill_ids.include?(skill.id) %>
-          <br>
-        <% end %>
-      </div><br>
-      <label>Desired Skills</label>
-      <div class="checkbox_field">
-        <% @skills.each do |skill| %>
-          <div class="skill_name">
-            <%= skill.name %>  
-          </div>
-          <%= check_box_tag "user[goal_ids][]", skill.id, @user.goal_ids.include?(skill.id) %>
-          <br>
-        <% end %>
-    
-      <div class="actions">
-        <%= f.submit %>
+      <div class="row">
+        <div class="form-group col-md-2">
+        <%= f.label :position_id, class: "form-label" %>*<br>
+        <%= f.collection_select :position_id, @positions, :id, :name,
+                                {include_blank: ""}, {class: "form-control"} %>
+        </div>
+        <div class="form-group col-md-4">
+          <%= f.label :manager_id, "Immediate Supervisor", class: "form-label" %><br>
+          <%= f.collection_select :manager_id, User.all, :id, :full_name,
+                                  {include_blank: ""}, {class: "form-control"} %>
+        </div>
+        <div class="form-group col-md-2">
+          <%= f.label :years_with_company, class: "form-label" %><br>
+          <%= f.number_field :years_with_company, class: "form-control" %>
+        </div>
       </div>
-  </div>
+      <div class="row">
+        <div class="form-group col-md-6">
+          <%= f.label :description, "Write a short description about yourself", class: "form-label" %><br>
+          <%= f.text_area :description, class: "form-control" %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2">
+          Current Skills
+        </div>
+        <div class = "checkbox_field col-md-4">
+          <% @skills.each do |skill| %>
+            <div class = "skill_name">
+              <%= skill.name %> 
+            </div>
+            <%= check_box_tag  "user[skill_ids][]", skill.id, @user.skill_ids.include?(skill.id) %>
+            <br>
+          <% end %>
+        </div>
+        <div class="col-md-2">
+          Desired Skills
+        </div>
+        <div class="checkbox_field col-md-4">
+          <% @skills.each do |skill| %>
+            <div class="skill_name">
+              <%= skill.name %>  
+            </div>
+            <%= check_box_tag "user[goal_ids][]", skill.id, @user.goal_ids.include?(skill.id) %>
+            <br>
+          <% end %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="actions col-md-4 col-md-offset-2">
+          <%= f.submit "Update Profile", class: "btn btn-default btn-sm" %>
+        </div>
+        <div class="actions col-md-4">
+          <%= link_to "Cancel", session.delete(:return_to), class: "btn btn-default btn-sm col-fill" %>
+        </div>
+      </div>
 </div>
 <% end %>
