--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,62 +1,32 @@
-<h1>Listing Users</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Email</th>
-      <th>Department</th>
-      <th>Location</th>
-      <th>Position</th>
-      <th>Group</th>
-      <th>Manager</th>
-      <th>Years with company</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.first_name %></td>
-        <td><%= user.last_name %></td>
-        <td><%= user.email %></td>
-        <td>
-          <%= request_if_missing(user, :department, :name) %>
-        </td>
-        <td>
-          <%= request_if_missing(user, :location, :name) %>
-        </td>
-        <td>
-          <%= request_if_missing(user, :position, :name) %>
-        </td>
-        <td>
-          <%= request_if_missing(user, :group, :name) %>
-        </td>
-        <td>
-          <% if user.manager.nil? %>
-            No Manager
-          <% else %>
-            <%= user.manager.full_name %>
-          <% end %>
-        </td>
-        <td><%= user.years_with_company %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td>
-          <% if current_user?(user) %>
-            <%= link_to 'Edit', edit_user_path(user) %>
-          <% end %>
-        </td>
-        <td>
-          <% if current_user.admin? %>
-            <%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+<div class="container">
+  <h1>Listing Users</h1>
+  <% @users.each do |user| %>
+    <div class="row">
+      <h4><%= user.full_name %></h4> - <a href="mailto:<%= user.email %>"><%= user.email %></a>
+    </div>
+    <div class="row">
+      <%= request_if_missing(user, :position, :name) %>, member of <%= request_if_missing(user, :group, :name) %>
+       in <%= request_if_missing(user, :department, :name) %> located in <%= request_if_missing(user, :location, :name) %>
+    </div>
+    <div class="row">
+      Has worked for the company for <%= user.years_with_company %> years and is managed by 
+      <% if user.manager.nil? %>
+        No Manager 
+      <% else %>
+        <%= user.manager.full_name %>
+      <% end %>
+    </div>
+    <div class="row">
+      <%= link_to "Full Profile", user, class: "btn btn-default btn-xs" %>
+      <% if current_user == user %>
+        <%= link_to "Edit", edit_user_path(user), class: "btn btn-default btn-xs" %>
+      <% end %>
+      <% if current_user.admin? %>
+        <%= link_to "Delete", user, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default btn-xs" %>
+      <% end %>
+    </div><br>
+  <% end %>
+</div>
 <br>
 
 <%= link_to 'New User', new_user_path %>
