--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,64 +1,130 @@
 <% provide(:title, @user.first_name + " " + @user.last_name) %>
+<br>
 <div class = "row">
-  <aside class="col-md-4">
-    <section class="user_info">
-      <h1>
-        <%= gravatar_for @user %>
-        <%= @user.first_name + " " + @user.last_name %>
-        <p>
-            <%= @user.email %>
-        </p>
-      </h1>
-    </section>
+  <aside class="col-sm-2">
+    <div class="row center">
+      <% if current_user?(@user) %>
+        <%= link_to 'Edit', edit_user_path(@user), class: "btn btn-default btn-sm" %>
+      <% end %>
+    </div>
+    <div class="row center">
+      <section class="gravatar center">
+          <%= gravatar_for @user %>
+      </section>
+    </div>
   </aside>
-  <div class="col-md-8">
-    <div class="col-md-4">
-      <strong>Manager:</strong>
-      <% if @user.manager.nil? %>
-        No Manager Assigned
-      <% else %>
-        <%= @user.manager.full_name %>
-      <% end %>
+  <div class="col-md-8"><br><br>
+    <div class="row">
+      <div class="col-md-8">
+        <strong>First Name:</strong>
+        <%= @user.first_name %>
+      </div>
     </div>
-    <div class="col-md-4">
-      <strong>Years with company:</strong>
-      <% if @user.years_with_company.nil? %>
-        Please Update Profile
-      <% else %>
-        <%= @user.years_with_company %>
-      <% end %>        
+    <div class="row">
+      <div class="col-md-8">
+        <strong>Last Name:</strong> 
+        <%= @user.last_name %>
+      </div>
     </div>
-    <div class="col-md-4">
-      <strong>Department:</strong>
-      <%= request_if_missing(@user, :department, :name) %>
+    <div class="row">
+      <div class="col-md-8">
+        <strong>Email:</strong> 
+        <%= @user.email %>
+      </div>
     </div>
-    <div class="col-md-4">
-      <strong>Location:</strong>
-      <%= request_if_missing(@user, :location, :name) %>
+    <div class="row">
+      <div class="col-md-8">
+        <strong>Office:</strong>
+        <%= request_if_missing(@user, :location, :name) %>
+      </div>
     </div>
-    <div class="col-md-4">
-      <strong>Position:</strong>
-      <%= request_if_missing(@user, :position, :name) %>
+    <div class="row">
+      <div class="col-md-8">
+        <strong>Department:</strong>
+        <%= request_if_missing(@user, :department, :name) %>
+      </div>
     </div>
-    <div class="col-md-4">
-      <strong>Group:</strong>
-      <%= request_if_missing(@user, :group, :name) %>
+    <div class="row">
+      <div class="col-md-8">
+        <strong>Group:</strong>
+        <%= request_if_missing(@user, :group, :name) %>
+      </div>
     </div>
-    <div class="col-md-4">
-      <strong>Current Skills:</strong>
-      <% @user.skills.each do |skill| %>
-        <li><%= skill.name %></li>
-      <% end %>
+    <div class="row">
+      <div class="col-md-8">
+        <strong>Position:</strong>
+        <%= request_if_missing(@user, :position, :name) %>
+      </div>
     </div>
-    <div class="col-md-4">
-      <strong>Desired Skills:</strong>
-      <% @user.goals.each do |goal| %>
-        <li><%= goal.name %></li>
-      <% end %>
-  </div>
+    <div class="row">
+      <div class="col-md-8">
+        <strong>Immediate Supervisor:</strong>
+        <% if @user.manager.nil? %>
+          No Supervisor Assigned
+        <% else %>
+          <%= @user.manager.full_name %>
+        <% end %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-8">
+        <strong>Years with company:</strong>
+        <% if @user.years_with_company.nil? %>
+          Please Update Profile
+        <% else %>
+          <%= @user.years_with_company %>
+        <% end %>        
+      </div>
+    </div><br>
+    <div class="row">
+      <div class="col-md-8 horizontal-list">
+        <strong>Current Skills:</strong>
+        <% @user.skills.each do |skill| %>
+          <li><%= skill.name %></li>
+        <% end %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-8 horizontal-list">
+        <strong>Desired Skills:</strong>
+        <% @user.goals.each do |goal| %>
+          <li><%= goal.name %></li>
+        <% end %>
+      </div>
+    </div><br>
+    <div class="row">
+      <div class="col-md-8">
+        <strong>Short Description about <%= @user.first_name %></strong>
+        <%= @user.description %>
+      </div>
+    </div><br>
+    <div class="row">
+      <div class="col-md-12">
+        <strong>Projects I've Worked On</strong>
+        <div class="row">
+          <div class="col-md-12">
+            <% if @user.assignments.any? %><br>
+              <% @user.assignments.each do |assignment| %>
+                   <div class="row"> 
+                    <div class="col-md-12">
+                      <%= assignment.request.project.name %>: 
+                      <%= assignment.request.project.start_date.to_s(:long) %> - 
+                      <%= assignment.request.project.end_date.to_s(:long) %>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12">
+                      Description: 
+                      <%= assignment.request.project.description %>
+                    </div>
+                  </div>
+                  <br>
+              <% end %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
 </div>
 
-  <% if current_user?(@user) %>
-    <%= link_to 'Edit', edit_user_path(@user) %> |
-  <% end %>
 <%= link_to 'Back', users_path %>
