--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -41,10 +41,10 @@ $gray-medium-light: #eaeaea;
 
 /* typography */
 
-h1, h2, h3, h4, h5, h6 {
-  line-height: 1;
+h1
+{
+  padding-top: 20px;
 }
-
 
 
 h2 {
@@ -137,13 +137,7 @@ aside {
       margin-bottom: 3px;
       line-height: 1;
     }
-    h1 {
-      font-size: 1.4em;
-      text-align: left;
-      letter-spacing: -1px;
-      margin-bottom: 3px;
-      margin-top: 0px;
-    }
+
   }
 }
 
@@ -223,6 +217,10 @@ input[type=checkbox]{
   background-color: #dff0d8;
   border-color: #d6e9c6;
   color: #3c763d;
+}
+h1
+{
+  display: inline;
 }
 h4
 {
