--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,46 +1,43 @@
-  <div class="container">
-    <header>
-      <ul class="nav nav-pills pull-right btn-group">
-        <% if logged_in? %>
-          <li><%= link_to "Projects", projects_path %></li>
-          <li><%= link_to "Users", users_path %></li>
-          <% if current_user.admin? %>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin Menu <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "Departments", departments_path %></li>
-                <li><%= link_to "Groups", groups_path %></li>
-                <li><%= link_to "Locations", locations_path %></li>
-                <li><%= link_to "Positions", positions_path %></li>
-                <li><%= link_to "Skills", skills_path %></li>
-              </ul>
-            </li>
-          <% end %>
-          <li><%= link_to "Log Out", logout_path, method: "delete" %></li>
-        <% else %>
-          <li><%= link_to "Log In", login_path%></li>
-        <% end %>
-      </ul>
-    </header>
-  </div>
-  
-  <div class="container">
-    <nav>
-      <ul class="nav nav-tabs">
-        <% if logged_in? %>
-          <li role="presentation" class=<%= 'active' if params.include?(:active) %>>
-            <%= link_to "Open Requests",  requests_path(:active => true) %>
-          </li>
-          <li role="presentation" class=<%= 'active' if params.include?(:user) %>>
-            <%= link_to "My Requests",    requests_path(:user => current_user) %>
-          </li>
-          <li role="presentation" class=<%= 'active' if params.include?(:applied) %>>
-            <%= link_to "Applications", requests_path(:applied => true) %>
-          </li>
-          <li role="presentation" class=<%= 'active' if current_page?(current_user) %>>
-            <%= link_to "My Profile", current_user %>
+<div class="container">
+  <nav>
+    <ul class="nav nav-tabs">
+      <% if !logged_in? %>
+        <li role="presentation" class="pull-right">
+          <%= link_to "Log In", login_path %>
+        </li>
+      <% elsif logged_in? %>
+        <li role="presentation" class=<%= 'active' if params.include?(:active) %>>
+          <%= link_to "Open Requests",  requests_path(:active => true) %>
+        </li>
+        <li role="presentation" class=<%= 'active' if params.include?(:applied) %>>
+          <%= link_to "Applications", requests_path(:applied => true) %>
+        </li>
+        <li role="presentation" class=<%= 'active' if params.include?(:user) %>>
+          <%= link_to "My Requests",    requests_path(:user => current_user) %>
+        </li>
+        <li role="presentation" class=<%= 'active' if current_page?(current_user) %>>
+          <%= link_to "My Profile", current_user %>
+        </li>
+        <li role="presentation" class=<%= 'active' if current_page?(projects_path) %>>
+          <%= link_to "Projects", projects_path %>
+        </li>
+        <% if current_user.admin? %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin Menu <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Users", users_path %></li>
+              <li><%= link_to "Departments", departments_path %></li>
+              <li><%= link_to "Groups", groups_path %></li>
+              <li><%= link_to "Locations", locations_path %></li>
+              <li><%= link_to "Positions", positions_path %></li>
+              <li><%= link_to "Skills", skills_path %></li>
+            </ul>
           </li>
         <% end %>
-      </ul>
-    </nav>
-  </div>
+        <li role="presentation" class="pull-right">
+          <%= link_to "Log Out", logout_path, method: "delete" %>
+        </li>
+      <% end %>
+    </ul>
+  </nav>
+</div>
