Modified styling for more consistent look and feel

--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Departments</h1>
-<%= link_to 'New Department', new_department_path, class: "btn btn-default btn-sm" %><br><br>
+<h1 class="head-title">Listing Departments</h1>
+<%= link_to 'New Department', new_department_path, class: "btn btn-default btn-xs" %><br><br>
     <% @departments.each do |department| %>
       <div class="row">
         <div class="col-md-6">
