--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Locations</h1>
-<%= link_to 'New Location', new_location_path, class: "btn btn-default btn-sm" %><br><br>
+<h1 class="head-title">All Locations</h1>
+<%= link_to 'New Location', new_location_path, class: "btn btn-default btn-xs" %><br><br>
     <% @locations.each do |location| %>
       <div class="row">
         <div class="col-md-6">
