--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Skills</h1>
-<%= link_to 'New skill', new_skill_path, class: "btn btn-default btn-sm" %><br><br>
+<h1 class="head-title">All Skills</h1>
+<%= link_to 'New skill', new_skill_path, class: "btn btn-default btn-xs" %><br><br>
     <% @skills.each do |skill| %>
       <div class="row">
         <div class="col-md-6">
