--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -43,9 +43,12 @@ $gray-medium-light: #eaeaea;
 
 h1
 {
-  padding-top: 20px;
+  display: inline;
 }
-
+h4
+{
+  display: inline-block;
+}
 
 h2 {
   font-size: 1.2em;
@@ -218,14 +221,6 @@ input[type=checkbox]{
   border-color: #d6e9c6;
   color: #3c763d;
 }
-h1
-{
-  display: inline;
-}
-h4
-{
-  display: inline-block;
-}
 .horizontal-list
 {
   list-style-type: none;
@@ -247,4 +242,12 @@ h4
 .gravatar
 {
   width: 100%;
+}
+.separator
+{
+  margin-top:5px;
+}
+.head-title
+{
+  text-decoration:underline;
 }
