--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Groups</h1>
-<%= link_to 'New Group', new_group_path, class: "btn btn-default btn-sm" %><br><br>
+<h1 class="head-title">All Groups</h1>
+<%= link_to 'New Group', new_group_path, class: "btn btn-default btn-xs" %><br><br>
     <% @groups.each do |group| %>
       <div class="row">
         <div class="col-md-6">
