--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,23 +1,26 @@
-<h1>Listing Projects</h1>
+<h1 class="head-title">Listing Projects</h1> <%= link_to 'New Project', new_project_path, class: " btn btn-default btn-xs" %>
 <div id="project_container">
   <% @projects.each do |project| %>
   <div class="each_request">
     <div class="row">
-      <h4><%= project.name %></h4>  <%= project.start_date.to_s(:long) %> - <%= project.end_date.to_s(:long) %>
+      <div class="col-md-6">
+        <h4><%= project.name %></h4>  <%= project.start_date.to_s(:long) %> - <%= project.end_date.to_s(:long) %>
+      </div>
     </div>
     <div class="row">
-      Description: <%= project.description %>, created by: <%= project.user.full_name %>
+      <div class="col-md-6">
+        Description: <%= project.description %>, created by: <%= project.user.full_name %>
+      </div>
     </div>
     <div class="row">
-      <%= link_to 'Show', project %>
-      <%= link_to 'Edit', edit_project_path(project) %>
-      <% if current_user.admin? || owner_of?(project) %>
-        <%= link_to 'Delete', project, method: :delete, data: {confirm: "Are you sure?" } %>
-      <% end %>
+      <div class="col-md-6">
+        <%= link_to 'Show', project %>
+        <%= link_to 'Edit', edit_project_path(project) %>
+        <% if current_user.admin? || owner_of?(project) %>
+          <%= link_to 'Delete', project, method: :delete, data: {confirm: "Are you sure?" } %>
+        <% end %>
+      </div>
     </div>
   </div><br>
   <% end %>
 </div>
-
-
-<%= link_to 'New Project', new_project_path, class: " btn btn-default btn-md" %>
