--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,18 @@
-<div class="container">
-  <h1>Listing Users</h1>
-  <% @users.each do |user| %>
-    <div class="row">
+<h1 class="head-title">All Users</h1>
+<% @users.each do |user| %>
+  <div class="row">
+    <div class="col-md-6">
       <h4><%= user.full_name %></h4> - <a href="mailto:<%= user.email %>"><%= user.email %></a>
     </div>
-    <div class="row">
+  </div>
+  <div class="row">
+    <div class="col-md-6">
       <%= request_if_missing(user, :position, :name) %>, member of <%= request_if_missing(user, :group, :name) %>
        in <%= request_if_missing(user, :department, :name) %> located in <%= request_if_missing(user, :location, :name) %>
-    </div>
-    <div class="row">
+     </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6">
       Has worked for the company for <%= user.years_with_company %> years and is managed by 
       <% if user.manager.nil? %>
         No Manager 
@@ -16,17 +20,18 @@
         <%= user.manager.full_name %>
       <% end %>
     </div>
-    <div class="row">
+  </div>
+  <div class="row">
+    <div class="col-md-6">
       <%= link_to "Full Profile", user, class: "btn btn-default btn-xs" %>
-      <% if current_user == user %>
+      <% if current_user.admin? || current_user == user %>
         <%= link_to "Edit", edit_user_path(user), class: "btn btn-default btn-xs" %>
       <% end %>
       <% if current_user.admin? %>
         <%= link_to "Delete", user, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default btn-xs" %>
       <% end %>
-    </div><br>
-  <% end %>
-</div>
-<br>
+    </div>
+  </div><br>
+<% end %>
 
-<%= link_to 'New User', new_user_path %>
+<br>
