--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, @user.first_name + " " + @user.last_name) %>
 <div class="row">
   <div class=" col-md-8">
-    <h1><%= @user.first_name %> <%=@user.last_name %></h1>
+    <h1 class="head-title"><%= @user.first_name %> <%=@user.last_name %></h1>
     <% if current_user?(@user) || current_user.admin? %>
-      <%= link_to 'Edit', edit_user_path(@user), class: "btn btn-default btn-sm" %>
+      <%= link_to 'Edit', edit_user_path(@user), class: "btn btn-default btn-xs" %>
     <% end %>
   </div>
 </div>
