--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,8 @@
 <div class="container">
-  <nav>
+    <%= link_to "One Team", root_path, id: "logo" %>
+</div>
+<div class="container">
+    <nav>
     <ul class="nav nav-tabs">
       <% if !logged_in? %>
         <li role="presentation" class="pull-right">
@@ -22,7 +25,7 @@
           <%= link_to "Projects", projects_path %>
         </li>
         <% if current_user.admin? %>
-          <li class="dropdown">
+          <li role="presentation" class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin Menu <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><%= link_to "Users", users_path %></li>
